添加商品上传。

--- a/emd_taotao_manager_web/pom.xml
+++ b/emd_taotao_manager_web/pom.xml
@@ -13,7 +13,7 @@
 	<description>这个是依赖最外层的parent，而不是manager的</description>
 
 	<dependencies>
-		
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -90,6 +90,20 @@
 			<groupId>com.david</groupId>
 			<artifactId>emd_taotao_common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>fastdfs_client</groupId>
+			<artifactId>fastdfs_client</artifactId>
+			<version>1.25</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<!-- 文件上传组件 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
