--- a/emd_taotao_content/pom.xml
+++ b/emd_taotao_content/pom.xml
@@ -5,6 +5,7 @@
 		<groupId>com.david</groupId>
 		<artifactId>emd_taotao_parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../emd_taotao_parent/pom.xml</relativePath>
 	</parent>
 	<groupId>com.david</groupId>
 	<artifactId>emd_taotao_content</artifactId>
