--- a/emd_taotao_content_service/pom.xml
+++ b/emd_taotao_content_service/pom.xml
@@ -76,5 +76,10 @@
 			<artifactId>emd_taotao_content_interface</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<!-- Redis客户端 -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
 	</dependencies>
 </project>
