--- a/emd_taotao_portal_web/pom.xml
+++ b/emd_taotao_portal_web/pom.xml
@@ -89,6 +89,11 @@
 			<artifactId>emd_taotao_common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.david</groupId>
+			<artifactId>emd_taotao_content_interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
   	</dependencies>
 	<build>
 		<plugins>
