--- a/emd_taotao_search/emd_taotao_search_service/src/main/resources/properties/db.properties
+++ b/emd_taotao_search/emd_taotao_search_service/src/main/resources/properties/db.properties
@@ -1,4 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/taotao?characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://localhost:3306/emd_taotao?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://192.168.1.188:3306/emd_taotao?characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=1234
