--- a/emd_taotao_search/emd_taotao_search_service/pom.xml
+++ b/emd_taotao_search/emd_taotao_search_service/pom.xml
@@ -85,6 +85,11 @@
 			<artifactId>emd_taotao_search_dao</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+			<!-- activemq的jar包 -->
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-all</artifactId>
+		</dependency>
   	</dependencies>
 	<build>
 		<resources>
