--- a/emd_taotao_search/emd_taotao_search_service/src/main/webapp/WEB-INF/web.xml
+++ b/emd_taotao_search/emd_taotao_search_service/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
-	<display-name>taotao-search</display-name>
+	<display-name>emd_taotao_search_service</display-name>
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
