添加商品详情页，缓存以及freemarker处理

--- a/emd_taotao_item_web/pom.xml
+++ b/emd_taotao_item_web/pom.xml
@@ -100,6 +100,11 @@
 			<artifactId>emd_taotao_common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.david</groupId>
+			<artifactId>emd_taotao_manager_interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
   </dependencies>
 	<build>
 		<plugins>
